--- a/frontend/index.html
+++ b/frontend/index.html
@@ -100,6 +100,9 @@ let lastTranscript = "";
 let hmNeigen = false;
 let hmStartTime = 0;
 const hmDuration = 2000; // Dauer Hm-Phase
+let hmStartRotX = 0;
+let hmStartRotY = 0;
+
 let rising = false;
 let riseStartTime = 0;
 const riseDuration = 1200;
@@ -161,14 +164,16 @@ function animate(){
       if(t >= 1) rising = false;
     }
 
-    // Hm-Phase: sanft nach rechts neigen
+    // Hm-Phase: langsam nach rechts neigen
     if(hmNeigen){
       const t = (performance.now() - hmStartTime) / hmDuration;
       if(t >= 1){
         hmNeigen = false;
+        model.rotation.x = hmStartRotX + 0.3;
+        model.rotation.y = hmStartRotY + 0.523;
       } else {
-        model.rotation.x = baseRotX + 0.3; // leicht nach unten
-        model.rotation.y = (baseRotY - Math.PI/2) + 0.523 * t; // sanft nach rechts 30°
+        model.rotation.x = hmStartRotX + 0.3 * t;
+        model.rotation.y = hmStartRotY + 0.523 * t;
       }
     }
 
@@ -217,6 +222,8 @@ if("webkitSpeechRecognition" in window){
       hmStarted = true;
       hmNeigen = true;
       hmStartTime = performance.now();
+      hmStartRotX = model.rotation.x;
+      hmStartRotY = model.rotation.y;
       speak("Hmmmmmm… einen Moment", true); // sehr langsam
 
       fetch("/ask", {
