--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,81 +1,81 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Frag Friedrich Barbarossa</title>
 <link rel="icon" href="avatar.png" type="image/png">
 <link rel="apple-touch-icon" href="avatar.png">
 <meta name="theme-color" content="#000000">
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Frag Friedrich Barbarossa</title>
 <style>
 body {
-  margin: 0;
-  overflow: hidden;
-  background-color: black;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  flex-direction: column;
-  font-family: "Georgia", serif;
-  color: white;
+  margin:0;
+  overflow:hidden;
+  background:black;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  height:100vh;
+  flex-direction:column;
+  font-family:"Georgia",serif;
+  color:white;
 }
 h1 {
-  position: absolute;
-  top: 20px;
-  text-align: center;
-  width: 100%;
-  font-size: 2em;
-  color: #e0b36b;
-  text-shadow: 0 0 10px #000;
-  letter-spacing: 2px;
-  animation: pulse 3s ease-in-out infinite;
+  position:absolute;
+  top:20px;
+  text-align:center;
+  width:100%;
+  font-size:2em;
+  color:#e0b36b;
+  text-shadow:0 0 10px #000;
+  letter-spacing:2px;
+  animation:pulse 3s ease-in-out infinite;
 }
 @keyframes pulse {
   0%,100% { transform: scale(1); opacity:1; }
   50% { transform: scale(1.05); opacity:0.9; }
 }
-#avatarCanvas { width: 100%; height: 100%; display: block; }
+#avatarCanvas { width:100%; height:100%; display:block; }
 #loading {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  color: #ccc;
-  font-size: 1.2em;
-  text-align: center;
+  position:absolute;
+  top:50%;
+  left:50%;
+  transform:translate(-50%,-50%);
+  color:#ccc;
+  font-size:1.2em;
+  text-align:center;
 }
 #micBtn {
-  position: absolute;
-  bottom: 60px;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-  background: #222;
-  color: white;
-  border: none;
-  font-size: 32px;
-  cursor: pointer;
-  z-index: 10;
+  position:absolute;
+  bottom:60px;
+  left:50%;
+  transform:translateX(-50%);
+  width:80px;
+  height:80px;
+  border-radius:50%;
+  background:#222;
+  color:white;
+  border:none;
+  font-size:32px;
+  cursor:pointer;
+  z-index:10;
 }
 #micBtn:hover { background:#444; }
 #micNotice {
-  position: absolute;
-  bottom: 140px;
-  width: 100%;
-  text-align: center;
-  color: #aaa;
-  font-size: 0.9em;
+  position:absolute;
+  bottom:140px;
+  width:100%;
+  text-align:center;
+  color:#aaa;
+  font-size:0.9em;
 }
 footer {
-  position: absolute;
-  bottom: 15px;
-  width: 100%;
-  text-align: center;
-  font-size: 0.8em;
-  color: #aaa;
+  position:absolute;
+  bottom:15px;
+  width:100%;
+  text-align:center;
+  font-size:0.8em;
+  color:#aaa;
 }
 footer a { color:#aaa; text-decoration:none; }
 footer a:hover { text-decoration: underline; }
@@ -95,19 +95,39 @@ footer a:hover { text-decoration: underline; }
 <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/examples/js/loaders/GLTFLoader.js"></script>
 
 <script>
-let model, talking=false, greeted=false;
+let model;
+let talking=false;
+let greeted=false;
+let recognizing=false;
+let recognition;
 let lastTranscript="";
-let hmNeigen=false, hmStartTime=0, hmStartRotX=0, hmStartRotY=0;
-let rising=false, riseStartTime=0, riseDuration=1200;
+
+// Flags für Bewegungen
+let rising=false;
+let riseStartTime=0;
+const riseDuration=1200;
+
+let hmNeigen=false;
+let hmStartTime=0;
+let hmStartRotX=0;
+let hmStartRotY=0;
+
 let resetToStart=false;
 
-let baseRotY=-0.35, baseRotX=0.25, targetRotY=baseRotY, targetRotX=baseRotX, baseY=0;
+// Kopfrotationen
+const baseRotY=-0.35;
+const baseRotX=0.25;
+let targetRotY=baseRotY;
+let targetRotX=baseRotX;
+const baseY=0;
 
+// Three.js Szene
 const scene = new THREE.Scene();
-const camera = new THREE.PerspectiveCamera(30, window.innerWidth/window.innerHeight, 0.1, 1000);
+const camera = new THREE.PerspectiveCamera(30,window.innerWidth/window.innerHeight,0.1,1000);
 camera.position.set(0,0,2.8);
-const renderer = new THREE.WebGLRenderer({canvas: document.getElementById("avatarCanvas"), antialias:true});
-renderer.setSize(window.innerWidth, window.innerHeight);
+
+const renderer = new THREE.WebGLRenderer({canvas:document.getElementById("avatarCanvas"),antialias:true});
+renderer.setSize(window.innerWidth,window.innerHeight);
 renderer.setPixelRatio(window.devicePixelRatio);
 renderer.setClearColor(0x000000);
 
@@ -124,15 +144,15 @@ const loadingText = document.getElementById("loading");
 
 loader.load("./avatar.glb", gltf=>{
   model=gltf.scene;
-  const box=new THREE.Box3().setFromObject(model);
-  const size=box.getSize(new THREE.Vector3());
-  const maxDim=Math.max(size.x,size.y,size.z);
-  const scaleFactor=(1.5/maxDim)*0.8; // 80% verkleinert
+  const box = new THREE.Box3().setFromObject(model);
+  const size = box.getSize(new THREE.Vector3());
+  const maxDim = Math.max(size.x,size.y,size.z);
+  const scaleFactor = (1.5/maxDim)*0.8; // 80% verkleinert
   model.scale.set(scaleFactor,scaleFactor,scaleFactor);
-  const center=box.getCenter(new THREE.Vector3());
+  const center = box.getCenter(new THREE.Vector3());
   model.position.sub(center);
-  model.rotation.y=baseRotY-Math.PI/2;
-  model.rotation.x=baseRotX;
+  model.rotation.y = baseRotY - Math.PI/2;
+  model.rotation.x = baseRotX;
   scene.add(model);
   loadingText.style.display="none";
   animate();
@@ -144,12 +164,12 @@ loader.load("./avatar.glb", gltf=>{
 function animate(){
   requestAnimationFrame(animate);
   if(!model) return;
-  const time=performance.now();
+  const time = performance.now();
 
   // sanfte Atmung
   model.position.y = baseY + Math.sin(time*0.002)*0.003;
 
-  // Begrüßung Aufrichtung
+  // Aufrichtung Begrüßung
   if(rising){
     const t=(time-riseStartTime)/riseDuration;
     const easeT=t<0?0:(t>1?1:(-Math.cos(Math.PI*t)/2+0.5));
@@ -160,38 +180,38 @@ function animate(){
 
   // Hm-Neigung
   if(hmNeigen){
-    const t=(time-hmStartTime)/4000;
+    const t=(time-hmStartTime)/4000; // langsame Neigung
     if(t>=1){
       hmNeigen=false;
       rising=true;
       riseStartTime=performance.now();
     } else {
       model.rotation.x = hmStartRotX + 0.25*t;
-      model.rotation.y = hmStartRotY + 0.523*t;
+      model.rotation.y = hmStartRotY + 0.523*t; // 30 Grad ~0.523rad
     }
   }
 
   // Talking
   if(talking && !hmNeigen && !rising){
-    model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, targetRotX + Math.sin(time*0.0017)*0.03, 0.08);
-    model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, targetRotY + Math.sin(time*0.0013)*0.03 - Math.PI/2, 0.08);
+    model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, targetRotX + Math.sin(time*0.0017)*0.03,0.08);
+    model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, targetRotY + Math.sin(time*0.0013)*0.03 - Math.PI/2,0.08);
     model.rotation.z = Math.sin(time*0.0012)*0.015;
   } else if(!hmNeigen && !rising){
-    model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, targetRotY - Math.PI/2, 0.02);
-    model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, targetRotX, 0.02);
+    model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, targetRotY - Math.PI/2,0.02);
+    model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, targetRotX,0.02);
     model.rotation.z = THREE.MathUtils.lerp(model.rotation.z||0,0,0.02);
   }
 
   // Rückkehr nach Antwort
   if(resetToStart){
-    model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, baseRotX, 0.02);
-    model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, baseRotY-Math.PI/2, 0.02);
+    model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, baseRotX,0.02);
+    model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, baseRotY-Math.PI/2,0.02);
   }
 
   renderer.render(scene,camera);
 }
 
-window.addEventListener("resize", ()=>{
+window.addEventListener("resize",()=>{
   camera.aspect=window.innerWidth/window.innerHeight;
   camera.updateProjectionMatrix();
   renderer.setSize(window.innerWidth,window.innerHeight);
@@ -199,7 +219,6 @@ window.addEventListener("resize", ()=>{
 
 const micBtn = document.getElementById("micBtn");
 const micNotice = document.getElementById("micNotice");
-let recognizing=false, recognition;
 
 if("webkitSpeechRecognition" in window){
   recognition = new webkitSpeechRecognition();
@@ -207,41 +226,43 @@ if("webkitSpeechRecognition" in window){
   recognition.continuous=false;
   recognition.interimResults=false;
 
-  recognition.onresult = (event) => {
+  recognition.onresult = (event)=>{
     lastTranscript = event.results[0][0].transcript;
     console.log("🎙️ Gesprochen:", lastTranscript);
   };
 
-  recognition.onend = () => {
+  recognition.onend = ()=>{
     micBtn.style.background="#222";
     recognizing=false;
     if(lastTranscript){
-      const userText=lastTranscript;
+      const userText = lastTranscript;
       lastTranscript="";
+      // Hm-Neigung starten
       hmNeigen=true;
       hmStartTime=performance.now();
       hmStartRotX=model.rotation.x;
       hmStartRotY=model.rotation.y;
-      speak("Hmmmmmm… einen Moment", true);
 
-      fetch("/ask", {
-          method:"POST",
-          headers:{"Content-Type":"application/json"},
-          body:JSON.stringify({text:userText})
+      speak("Hmmmmmm… einen Moment",true);
+
+      fetch("/ask",{
+        method:"POST",
+        headers:{"Content-Type":"application/json"},
+        body:JSON.stringify({text:userText})
       }).then(resp=>resp.json())
-        .then(data=>{
-          const waitRiseEnd = setInterval(()=>{
-              if(!rising && !hmNeigen){
-                  speak(data.answer);
-                  const resetAfterAnswer = setInterval(()=>{
-                      if(!talking){
-                          resetToStart=true;
-                          clearInterval(resetAfterAnswer);
-                      }
-                  },50);
-                  clearInterval(waitRiseEnd);
+      .then(data=>{
+        const waitRiseEnd = setInterval(()=>{
+          if(!rising && !hmNeigen){
+            speak(data.answer);
+            const resetAfterAnswer = setInterval(()=>{
+              if(!talking){
+                resetToStart=true;
+                clearInterval(resetAfterAnswer);
               }
-          },50);
+            },50);
+            clearInterval(waitRiseEnd);
+          }
+        },50);
       }).catch(e=>console.error("Fehler bei /ask:",e));
     }
   };
@@ -249,6 +270,7 @@ if("webkitSpeechRecognition" in window){
   micNotice.textContent="🎤 Sprachsteuerung wird im Browser nicht unterstützt. Bitte Chrome/Edge nutzen.";
 }
 
+// Stimme laden
 let maleVoice=null;
 function loadVoices(){
   const voices=speechSynthesis.getVoices();
@@ -259,8 +281,8 @@ function loadVoices(){
 speechSynthesis.onvoiceschanged = loadVoices;
 loadVoices();
 
-function speak(text, slow=false){
-  if(!text || !maleVoice) return;
+function speak(text,slow=false){
+  if(!text||!maleVoice) return;
   const utter = new SpeechSynthesisUtterance(text);
   utter.lang="de-DE";
   utter.rate = slow?0.35:0.95;
@@ -272,6 +294,7 @@ function speak(text, slow=false){
   speechSynthesis.speak(utter);
 }
 
+// Mikrofon-Button
 micBtn.onclick = ()=>{
   if(!recognition) return;
   if(!greeted){
