--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,81 +1,81 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Frag Friedrich Barbarossa</title>
 <link rel="icon" href="avatar.png" type="image/png">
 <link rel="apple-touch-icon" href="avatar.png">
 <meta name="theme-color" content="#000000">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Frag Friedrich Barbarossa</title>
 <style>
 body {
-  margin:0;
-  overflow:hidden;
-  background:black;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  height:100vh;
-  flex-direction:column;
-  font-family:"Georgia",serif;
-  color:white;
+  margin: 0;
+  overflow: hidden;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  flex-direction: column;
+  font-family: "Georgia", serif;
+  color: white;
 }
 h1 {
-  position:absolute;
-  top:20px;
-  text-align:center;
-  width:100%;
-  font-size:2em;
-  color:#e0b36b;
-  text-shadow:0 0 10px #000;
-  letter-spacing:2px;
-  animation:pulse 3s ease-in-out infinite;
+  position: absolute;
+  top: 20px;
+  text-align: center;
+  width: 100%;
+  font-size: 2em;
+  color: #e0b36b;
+  text-shadow: 0 0 10px #000;
+  letter-spacing: 2px;
+  animation: pulse 3s ease-in-out infinite;
 }
 @keyframes pulse {
   0%,100% { transform: scale(1); opacity:1; }
   50% { transform: scale(1.05); opacity:0.9; }
 }
-#avatarCanvas { width:100%; height:100%; display:block; }
+#avatarCanvas { width: 100%; height: 100%; display: block; }
 #loading {
-  position:absolute;
-  top:50%;
-  left:50%;
-  transform:translate(-50%,-50%);
-  color:#ccc;
-  font-size:1.2em;
-  text-align:center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  color: #ccc;
+  font-size: 1.2em;
+  text-align: center;
 }
 #micBtn {
-  position:absolute;
-  bottom:60px;
-  left:50%;
-  transform:translateX(-50%);
-  width:80px;
-  height:80px;
-  border-radius:50%;
-  background:#222;
-  color:white;
-  border:none;
-  font-size:32px;
-  cursor:pointer;
-  z-index:10;
+  position: absolute;
+  bottom: 60px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  background: #222;
+  color: white;
+  border: none;
+  font-size: 32px;
+  cursor: pointer;
+  z-index: 10;
 }
 #micBtn:hover { background:#444; }
 #micNotice {
-  position:absolute;
-  bottom:140px;
-  width:100%;
-  text-align:center;
-  color:#aaa;
-  font-size:0.9em;
+  position: absolute;
+  bottom: 140px;
+  width: 100%;
+  text-align: center;
+  color: #aaa;
+  font-size: 0.9em;
 }
 footer {
-  position:absolute;
-  bottom:15px;
-  width:100%;
-  text-align:center;
-  font-size:0.8em;
-  color:#aaa;
+  position: absolute;
+  bottom: 15px;
+  width: 100%;
+  text-align: center;
+  font-size: 0.8em;
+  color: #aaa;
 }
 footer a { color:#aaa; text-decoration:none; }
 footer a:hover { text-decoration: underline; }
@@ -95,39 +95,30 @@ footer a:hover { text-decoration: underline; }
 <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/examples/js/loaders/GLTFLoader.js"></script>
 
 <script>
-let model;
-let talking=false;
-let greeted=false;
-let recognizing=false;
-let recognition;
-let lastTranscript="";
+let model, talking=false, greeted=false;
+let lastTranscript = "";
+let hmNeigen = false;
+let hmStartTime = 0;
+const hmDuration = 2000;
+let hmStartRotX = 0;
+let hmStartRotY = 0;
 
-// Flags für Bewegungen
-let rising=false;
-let riseStartTime=0;
-const riseDuration=1200;
+let rising = false;
+let riseStartTime = 0;
+const riseDuration = 1200;
+let hmStarted = false;
 
-let hmNeigen=false;
-let hmStartTime=0;
-let hmStartRotX=0;
-let hmStartRotY=0;
+let baseRotY = -0.35;
+let baseRotX = 0.25;
+let targetRotY = baseRotY;
+let targetRotX = baseRotX;
+let baseY = 0;
 
-let resetToStart=false;
-
-// Kopfrotationen
-const baseRotY=-0.35;
-const baseRotX=0.25;
-let targetRotY=baseRotY;
-let targetRotX=baseRotX;
-const baseY=0;
-
-// Three.js Szene
 const scene = new THREE.Scene();
-const camera = new THREE.PerspectiveCamera(30,window.innerWidth/window.innerHeight,0.1,1000);
+const camera = new THREE.PerspectiveCamera(30, window.innerWidth/window.innerHeight, 0.1, 1000);
 camera.position.set(0,0,2.8);
-
-const renderer = new THREE.WebGLRenderer({canvas:document.getElementById("avatarCanvas"),antialias:true});
-renderer.setSize(window.innerWidth,window.innerHeight);
+const renderer = new THREE.WebGLRenderer({canvas: document.getElementById("avatarCanvas"), antialias:true});
+renderer.setSize(window.innerWidth, window.innerHeight);
 renderer.setPixelRatio(window.devicePixelRatio);
 renderer.setClearColor(0x000000);
 
@@ -147,8 +138,8 @@ loader.load("./avatar.glb", gltf=>{
   const box = new THREE.Box3().setFromObject(model);
   const size = box.getSize(new THREE.Vector3());
   const maxDim = Math.max(size.x,size.y,size.z);
-  const scaleFactor = (1.5/maxDim)*0.8; // 80% verkleinert
-  model.scale.set(scaleFactor,scaleFactor,scaleFactor);
+  let scaleFactor = (1.5 / maxDim) * 0.8; 
+  model.scale.set(scaleFactor, scaleFactor, scaleFactor);
   const center = box.getCenter(new THREE.Vector3());
   model.position.sub(center);
   model.rotation.y = baseRotY - Math.PI/2;
@@ -163,55 +154,46 @@ loader.load("./avatar.glb", gltf=>{
 
 function animate(){
   requestAnimationFrame(animate);
-  if(!model) return;
-  const time = performance.now();
+  if(model){
+    // Aufrichten nach Begrüßung
+    if(rising){
+      const t = (performance.now() - riseStartTime) / riseDuration;
+      const easeT = t < 0 ? 0 : (t > 1 ? 1 : (-Math.cos(Math.PI * t)/2 + 0.5));
+      targetRotY = baseRotY * (1 - easeT);
+      targetRotX = baseRotX * (1 - easeT);
+      if(t >= 1) rising = false;
+    }
 
-  // sanfte Atmung
-  model.position.y = baseY + Math.sin(time*0.002)*0.003;
+    // Hm-Phase: langsam nach vorne-links neigen
+    if(hmNeigen){
+      const t = (performance.now() - hmStartTime) / hmDuration;
+      if(t >= 1){
+        hmNeigen = false;
+        model.rotation.x = hmStartRotX + 0.3;
+        model.rotation.y = hmStartRotY + 0.3; 
+      } else {
+        model.rotation.x = hmStartRotX + 0.3 * t;
+        model.rotation.y = hmStartRotY + 0.3 * t;
+      }
+    }
 
-  // Aufrichtung Begrüßung
-  if(rising){
-    const t=(time-riseStartTime)/riseDuration;
-    const easeT=t<0?0:(t>1?1:(-Math.cos(Math.PI*t)/2+0.5));
-    targetRotY=baseRotY*(1-easeT);
-    targetRotX=baseRotX*(1-easeT);
-    if(t>=1) rising=false;
-  }
-
-  // Hm-Neigung
-  if(hmNeigen){
-    const t=(time-hmStartTime)/4000; // langsame Neigung
-    if(t>=1){
-      hmNeigen=false;
-      rising=true;
-      riseStartTime=performance.now();
-    } else {
-      model.rotation.x = hmStartRotX + 0.25*t;
-      model.rotation.y = hmStartRotY + 0.523*t; // 30 Grad ~0.523rad
+    // Normal Talking Animation
+    if(talking && !hmNeigen){
+      model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, targetRotY + Math.sin(Date.now()*0.0015)*0.03 - Math.PI/2, 0.08);
+      model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, targetRotX + Math.sin(Date.now()*0.0019)*0.015, 0.08);
+      model.rotation.z = Math.sin(Date.now()*0.0012)*0.015;
+      model.position.y = baseY + Math.sin(Date.now()*0.01)*0.002;
+    } else if(!hmNeigen){
+      model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, targetRotY - Math.PI/2, 0.02);
+      model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, targetRotX, 0.02);
+      model.rotation.z = THREE.MathUtils.lerp(model.rotation.z || 0, 0, 0.02);
+      model.position.y = THREE.MathUtils.lerp(model.position.y, baseY, 0.02);
     }
   }
-
-  // Talking
-  if(talking && !hmNeigen && !rising){
-    model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, targetRotX + Math.sin(time*0.0017)*0.03,0.08);
-    model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, targetRotY + Math.sin(time*0.0013)*0.03 - Math.PI/2,0.08);
-    model.rotation.z = Math.sin(time*0.0012)*0.015;
-  } else if(!hmNeigen && !rising){
-    model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, targetRotY - Math.PI/2,0.02);
-    model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, targetRotX,0.02);
-    model.rotation.z = THREE.MathUtils.lerp(model.rotation.z||0,0,0.02);
-  }
-
-  // Rückkehr nach Antwort
-  if(resetToStart){
-    model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, baseRotX,0.02);
-    model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, baseRotY-Math.PI/2,0.02);
-  }
-
   renderer.render(scene,camera);
 }
 
-window.addEventListener("resize",()=>{
+window.addEventListener("resize", ()=>{
   camera.aspect=window.innerWidth/window.innerHeight;
   camera.updateProjectionMatrix();
   renderer.setSize(window.innerWidth,window.innerHeight);
@@ -219,6 +201,7 @@ window.addEventListener("resize",()=>{
 
 const micBtn = document.getElementById("micBtn");
 const micNotice = document.getElementById("micNotice");
+let recognizing=false, recognition;
 
 if("webkitSpeechRecognition" in window){
   recognition = new webkitSpeechRecognition();
@@ -226,92 +209,91 @@ if("webkitSpeechRecognition" in window){
   recognition.continuous=false;
   recognition.interimResults=false;
 
-  recognition.onresult = (event)=>{
+  recognition.onresult = (event) => {
     lastTranscript = event.results[0][0].transcript;
     console.log("🎙️ Gesprochen:", lastTranscript);
   };
 
-  recognition.onend = ()=>{
-    micBtn.style.background="#222";
-    recognizing=false;
-    if(lastTranscript){
-      const userText = lastTranscript;
-      lastTranscript="";
-      // Hm-Neigung starten
-      hmNeigen=true;
-      hmStartTime=performance.now();
-      hmStartRotX=model.rotation.x;
-      hmStartRotY=model.rotation.y;
+  recognition.onend = () => {
+    micBtn.style.background = "#222";
+    recognizing = false;
 
-      speak("Hmmmmmm… einen Moment",true);
+    if(lastTranscript && !hmStarted){
+      hmStarted = true;
+      hmNeigen = true;
+      hmStartTime = performance.now();
+      hmStartRotX = model.rotation.x;
+      hmStartRotY = model.rotation.y;
+      speak("Hmmmmmm… einen Moment", true); 
 
-      fetch("/ask",{
+      fetch("/ask", {
         method:"POST",
         headers:{"Content-Type":"application/json"},
-        body:JSON.stringify({text:userText})
-      }).then(resp=>resp.json())
-      .then(data=>{
-        const waitRiseEnd = setInterval(()=>{
-          if(!rising && !hmNeigen){
-            speak(data.answer);
-            const resetAfterAnswer = setInterval(()=>{
-              if(!talking){
-                resetToStart=true;
-                clearInterval(resetAfterAnswer);
-              }
-            },50);
-            clearInterval(waitRiseEnd);
-          }
-        },50);
-      }).catch(e=>console.error("Fehler bei /ask:",e));
+        body: JSON.stringify({text:lastTranscript})
+      })
+      .then(resp => resp.json())
+      .then(data => {
+        rising = true;
+        riseStartTime = performance.now();
+        speak(data.answer);
+
+        setTimeout(()=>{
+          rising = true;
+          riseStartTime = performance.now();
+          hmStarted = false;
+          lastTranscript = "";
+        }, 500); 
+      })
+      .catch(e => console.error("Fehler bei /ask:", e));
     }
   };
 }else{
   micNotice.textContent="🎤 Sprachsteuerung wird im Browser nicht unterstützt. Bitte Chrome/Edge nutzen.";
 }
 
-// Stimme laden
-let maleVoice=null;
+let maleVoice = null;
 function loadVoices(){
-  const voices=speechSynthesis.getVoices();
-  maleVoice = voices.find(v=>/male|mann|stefan|markus/i.test(v.name))||
-              voices.find(v=>v.lang.startsWith("de"))||
+  const voices = speechSynthesis.getVoices();
+  maleVoice = voices.find(v=>/male|mann|stefan|markus/i.test(v.name)) ||
+              voices.find(v=>v.lang.startsWith("de")) ||
               voices[0]||null;
 }
 speechSynthesis.onvoiceschanged = loadVoices;
 loadVoices();
 
-function speak(text,slow=false){
-  if(!text||!maleVoice) return;
+function speak(text, slow=false){
+  if(!text || !maleVoice) return;
   const utter = new SpeechSynthesisUtterance(text);
   utter.lang="de-DE";
-  utter.rate = slow?0.35:0.95;
-  utter.pitch=0.6;
-  utter.voice=maleVoice;
-  utter.volume=0.6;
+  utter.rate = slow ? 0.4 : 0.95;
+  utter.pitch = 0.6;
+  utter.voice = maleVoice;
+  utter.volume = 0.6;
   utter.onstart=()=>{ talking=true; };
   utter.onend=()=>{ talking=false; };
   speechSynthesis.speak(utter);
 }
 
-// Mikrofon-Button
-micBtn.onclick = ()=>{
+micBtn.onclick = () => {
   if(!recognition) return;
+
   if(!greeted){
-    greeted=true;
-    rising=true;
-    riseStartTime=performance.now();
+    greeted = true;
+    rising = true;
+    riseStartTime = performance.now();
     speak("Seid gegrüßt, mein Freund. Ich bin Friedrich Barbarossa, nach tausend Jahren im Kaiserberg zu Lautern erwacht aus tiefem Schlummer. Sprecht, was begehrt Ihr?");
     return;
   }
+
   if(!recognizing){
     recognition.start();
-    micBtn.style.background="#555";
-    recognizing=true;
+    micBtn.style.background = "#555";
+    recognizing = true;
+    hmStarted = false;
   } else {
     recognition.stop();
-    micBtn.style.background="#222";
-    recognizing=false;
+    micBtn.style.background = "#222";
+    recognizing = false;
   }
 };
 </script>
